--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,14 +40,14 @@
             android:id="@+id/user_profile"
             android:background="@drawable/gradientbackground"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="180dp"
             android:orientation="vertical">
             <ImageView
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/profile_img"/>
+                android:src="@drawable/profilepic"/>
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
@@ -77,10 +77,15 @@
         <RelativeLayout
             android:layout_below="@id/user_posts_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content"
+            android:gravity="center">
             <Button
                 android:id="@+id/addPost"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Post"
                 android:textColor="@color/white"
@@ -89,14 +94,5 @@
             </Button>
         </RelativeLayout>
     </RelativeLayout>
-
-    <!--    <Button-->
-    <!--        android:textColor="@color/white"-->
-    <!--        android:backgroundTint="@color/colorPrimary"-->
-    <!--        android:layout_marginTop="35dp"-->
-    <!--        android:layout_gravity="center_horizontal"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Add Post"/>-->
 
 </LinearLayout>
