--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorPrimaryDark">#FF7518</color>
     <color name="colorAccent">#FF4081</color>
     <color name="lightgray">#D3D3D3</color>
+    <color name="profileback">#ffb380</color>
 </resources>
