--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,7 +6,8 @@
     android:title="Search"
     android:icon="@android:drawable/ic_menu_search"
     app:actionViewClass="androidx.appcompat.widget.SearchView"
-    app:showAsAction="always|collapseActionView"/>
+    app:showAsAction="always|collapseActionView"
+    app:itemTextColor="@color/white"/>
 
     <item
         android:id="@+id/actionCancel"
