--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -92,23 +92,9 @@
         android:textSize="15sp" />
 
     <EditText
-        android:id="@+id/rating"
+        android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Rating"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="text"
-        android:background="@drawable/layout_et"
-        android:textSize="15sp" />
-
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
@@ -118,6 +104,43 @@
         android:inputType="text"
         android:padding="15dp"
         android:textSize="15sp" />
+    <EditText
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/layout_et"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="Location"
+        android:inputType="text"
+        android:padding="15dp"
+        android:textSize="15sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rate"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_margin="20dp"
+        />
+
+    <RatingBar
+        android:id="@+id/ratingbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/location"
+        android:numStars="5"
+        android:rating="3.5"
+        android:gravity="right"
+        android:theme="@style/RatingBar"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
