--- a/app/src/main/res/menu/sidemenu.xml
+++ b/app/src/main/res/menu/sidemenu.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
-        <item android:id="@+id/home"
+        <item android:id="@+id/profile"
             android:icon="@drawable/ic_baseline_account_box_24"
             android:title="Account"/>
         <item android:id="@+id/logout"
             android:icon="@drawable/ic_baseline_logout_24"
-            android:title="logout"/>
+            android:title="logout" />
     </group>
 </menu>
