--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,7 @@
             android:layout_height="180dp"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/profileimage"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="120dp"
