--- a/app/src/main/res/layout/post_feed.xml
+++ b/app/src/main/res/layout/post_feed.xml
@@ -48,31 +48,59 @@
             </TextView>
 
         </LinearLayout>
-        <TextView
-            android:id="@id/title"
-            android:layout_below="@+id/profile_container"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/title_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Title: Letting Go"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:layout_below="@id/profile_container"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Title: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Letting Go"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/author"
-            android:layout_below="@+id/title"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/author_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Author: Philip Roth"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/title_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Author: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Philip Roth"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/book_img"
-            android:layout_below="@+id/author"
+            android:layout_below="@+id/author_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -81,76 +109,164 @@
             android:layout_marginTop="5dp">
         </ImageView>
 
-        <TextView
-            android:id="@+id/summary"
-            android:layout_below="@+id/book_img"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/summary_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Summary: Letting Go by Philip Roth is a book my father handed me. Only one novel a year, on average, was read by Dad. He read hundreds of scholarly non-fiction books each year because he studied politics."
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/book_img"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Summary: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Letting Go by Philip Roth is a book my father handed me. Only one novel a year, on average, was read by Dad. He read hundreds of scholarly non-fiction books each year because he studied politics."
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/genre"
-            android:layout_below="@+id/summary"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/genre_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Genre: Fictional"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/summary_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Genre: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/genre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Fictional"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/review"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/review_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/genre"
-            android:layout_marginTop="10dp"
-            android:text="Review: Good"
-            android:textColor="@color/black"
-            android:textSize="16sp"></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/genre_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Review: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Good"
+                android:textColor="@color/black"
+                android:textSize="16sp"></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/rating"
-            android:layout_below="@+id/review"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/rating_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Rating: 4/5"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/review_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Rating: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/rating"
+                android:layout_below="@+id/review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="4/5"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_below="@+id/rating"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/status_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Status: In hand"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/rating_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Status: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/status"
+                android:layout_below="@+id/rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="In hand"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_below="@+id/status"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/location_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Location: Texas"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            ></TextView>
+            android:orientation="horizontal"
+            android:layout_below="@id/status_container">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Location: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+            <TextView
+                android:id="@+id/location"
+                android:layout_below="@+id/status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Texas"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
 
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/location"
+            android:layout_below="@id/location_container"
             android:numStars="5"
             android:rating="3.5"
             android:theme="@style/RatingBar"/>
