--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="lightgray">#D3D3D3</color>
     <color name="profileback">#ffb380</color>
+    <color name="gray">#F0F0F0</color>
 </resources>
